Color contrast fixes

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body {
     margin-right: 50px;
     border-right: 5px solid #ffffff;
     border-top: 2px solid #ffffff;
+    color: #c4c4c4; /* Fix color contrast */
   }
   
   .yellow {
@@ -64,6 +65,7 @@ body {
     margin-left: 50px;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
+    color: #707070; /* Fix color contrast */
   }
   
   .green {
@@ -83,4 +85,5 @@ body {
     font-size: 20px;
     text-align: right;
     padding: 15px 15px 15px 0;
+    color: #c4c4c4; /* Fix color contrast */
   }
